<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_16dp"
        android:paddingBottom="@dimen/padding_24dp"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:background="@drawable/background_corner_30"
        android:backgroundTint="@color/defaultBackground">

        <FrameLayout
            android:id="@+id/frameSongIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible">

            <ImageView
                android:id="@+id/dialogIcon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:visibility="gone"
                android:contentDescription="@string/imageview"
                android:src="@drawable/icon_discard" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:background="@color/transparent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading_save" />
        </FrameLayout>


        <TextView
            android:id="@+id/dialogTitle"
            style="@style/CustomTextStyle20spSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6dp"
            android:gravity="center"
            android:text="@string/saved_successfully"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/dialogDescription"
            style="@style/CustomTextStyleMedium16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6dp"
            android:gravity="center"
            android:text="@string/visit_sketches"
            android:textColor="@color/white" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cancelBtn"
                android:text="@string/no"
                android:textColor="@color/white"
                android:background="@drawable/background_corner_30"
                android:backgroundTint="@color/gray"
                android:gravity="center"
                style="@style/CustomTextStyleMedium16sp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="@dimen/height_40dp" />

            <TextView
                android:id="@+id/okBtn"
                android:text="@string/ok"
                android:textColor="@color/black"
                android:background="@drawable/background_corner_30_horizontal"
                android:gravity="center"
                android:layout_marginStart="@dimen/margin_10dp"
                style="@style/CustomTextStyle16spBold"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_40dp" />


        </LinearLayout>

        <FrameLayout
            android:id="@+id/frNative"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>




</LinearLayout>