<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        app:layout_constraintBottom_toTopOf="@id/rlBot"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:contentDescription="@string/imageview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/first_intro"
                app:layout_constraintBottom_toTopOf="@id/container2"
                app:layout_constraintTop_toTopOf="parent" />



           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/container2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toBottomOf="@id/image"
               android:layout_marginHorizontal="@dimen/margin_20dp"
               android:background="@drawable/background_corner_30"
               android:backgroundTint="@color/lighterDefaultBackground"
               android:paddingHorizontal="@dimen/padding_20dp"
               android:layout_marginBottom="@dimen/margin_72dp"
               android:paddingVertical="27dp">

               <TextView
                   android:id="@+id/title"
                   android:textColor="@color/green"
                   android:text="@string/first_intro_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toTopOf="parent"
                   style="@style/CustomTextStyleSemiBold"
                   android:textSize="@dimen/size_24sp"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"/>

               <TextView
                   android:id="@+id/content"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/margin_20dp"
                   app:layout_constraintTop_toBottomOf="@id/title"
                   style="@style/CustomTextStyle16sp"
                   android:textColor="@color/white"
                   android:gravity="center"
                   android:text="@string/first_intro_description"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"/>

               <ImageView
                   android:id="@+id/slidedot"
                   android:contentDescription="@string/imageview"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="12dp"
                   android:src="@drawable/dot_1"
                   android:layout_marginTop="@dimen/margin_20dp"
                   app:layout_constraintTop_toBottomOf="@+id/content"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent" />



           </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/frNative"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/next"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:backgroundTint="@color/green"
            android:background="@drawable/background_corner_10"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/frNativeFull"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </FrameLayout>

    <ImageView
        android:id="@+id/closeAds"
        android:visibility="invisible"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />
    <FrameLayout
        android:id="@+id/frNative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>