<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/padding_40dp">

    <ImageView
        android:id="@+id/backBtn"
        android:src="@drawable/icon_back"
        android:contentDescription="@string/imageview"
        android:padding="@dimen/padding_6dp"
        android:layout_width="@dimen/width_32dp"
        android:layout_height="@dimen/height_32dp"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/CustomTextStyle20spBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/inspirations"
        android:textColor="@color/white" />

    <ScrollView
        android:id="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"
        app:layout_constraintBottom_toTopOf="@id/drawNow"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/sample_1"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_24sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay_CustomShape20dp" />

            <LinearLayout
                android:id="@+id/allButtons"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/downloadBtn"
                    android:contentDescription="@string/imageview"
                    android:src="@drawable/icon_download"
                    android:layout_width="@dimen/width_48dp"
                    android:layout_height="@dimen/height_48dp" />

                <ImageView
                    android:id="@+id/shareBtn"
                    android:visibility="gone"
                    android:layout_marginStart="@dimen/margin_10dp"
                    android:contentDescription="@string/imageview"
                    android:src="@drawable/icon_share"
                    android:layout_width="@dimen/width_48dp"
                    android:layout_height="@dimen/height_48dp" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/showNativePreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/allButtons"
                android:layout_marginVertical="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/drawNow"
        android:layout_width="@dimen/width_250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_corner_28"
        android:paddingVertical="@dimen/padding_12dp"
        android:layout_marginBottom="@dimen/margin_20dp">

        <ImageView
            android:contentDescription="@string/imageview"
            android:src="@drawable/icon_paint"
            android:layout_width="@dimen/width_32dp"
            android:layout_height="@dimen/width_32dp" />

        <TextView
            style="@style/CustomTextStyle20spSemiBold"
            android:text="@string/draw_this_now"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/frBanner" />

    <FrameLayout
        android:id="@+id/frBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>